FRONTEND: absolute possitioning conflict between loginBackground and DeviceType card solved with z-index layering

--- a/ToyerClient/Components/DevicesList/DevicesList.module.css
+++ b/ToyerClient/Components/DevicesList/DevicesList.module.css
@@ -11,6 +11,7 @@
   width: 230px;
   height: 300px;
   perspective: 20vw;
+  z-index: 0;
 }
 
 .card {
@@ -32,7 +33,7 @@
   height: 100%;
   border-radius: 2rem;
   box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
+  position:absolute;
   background-size: cover;
   background-position: center;
   backface-visibility: hidden;
